--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ serde_json = "1.0.100"
 tokio = { version = "1.29.1", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+
+[dev-dependencies]
+mockito = "1.1.0"
+tokio-test = "0.4.2"
